Removed Secrets from the properties file.

--- a/consumer/src/main/resources/authentication.properties
+++ b/consumer/src/main/resources/authentication.properties
@@ -1,8 +1,8 @@
 authentication.handler= OIDC
 #USERNAME_PASSWORD
 #OIDC
-oidc.clientId = 0oa3swioodJpiZ1ap5d7
-oidc.clientSecret = sWt5nR3AUb9MOBbj3B1oqKKARVsHAQqKv9Iio-3x
+oidc.clientId =
+oidc.clientSecret = 
 
 #metadata endpoint will provide rest of the endpoints, but still will keep them as separate properties for now
 oidc.metadataEndpoint = https://dev-22692225-admin.okta.com/.well-known/openid-configuration
