Added x509 authentication support. Updated readme.

--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-logging.level.root=INFO
+logging.level.root=debug
+server.port=8443
+server.ssl.key-store=/Users/bhushankarmarkar/Workspace/keystore/keystore.p12
+server.ssl.key-store-password=bkpune
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=server_cert
+server.ssl.key-password=bkpune
+server.ssl.client-auth=none
+server.ssl.trust-store=/Users/bhushankarmarkar/Workspace/keystore/truststore.p12
+server.ssl.trust-store-password=bkpune
