--- a/consumer/src/main/resources/authentication.properties
+++ b/consumer/src/main/resources/authentication.properties
@@ -1,8 +1,7 @@
 authentication.handler= OIDC
 #USERNAME_PASSWORD
 #OIDC
-oidc.clientId =
-oidc.clientSecret = 
+#X509
 
 #metadata endpoint will provide rest of the endpoints, but still will keep them as separate properties for now
 oidc.metadataEndpoint = https://dev-22692225-admin.okta.com/.well-known/openid-configuration
@@ -11,4 +10,7 @@ oidc.authorizationCodeEndpoint = https://dev-22692225.okta.com/oauth2/default/v1
 oidc.tokenEndpoint = https://dev-22692225.okta.com/oauth2/default/v1/token
 oidc.userInfoEndpoint = https://dev-22692225.okta.com/oauth2/default/v1/userinfo
 oidc.singleLogoutEndpoint = https://dev-22692225-admin.okta.com/default/v1/logout
-oidc.authorizationCodeCallbackEndpoint = http://localhost:8080/auth/oidc/code
+oidc.authorizationCodeCallbackEndpoint = https://bkpune.cv.com:8443/auth/oidc/code
+
+####X509 Properties#####
+x509.issuer=CN=bkca_localhost,OU=InfoSec,O=com.bk,C=IN
