--- a/core/pom.xml
+++ b/core/pom.xml
@@ -9,13 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>impl</artifactId>
+    <artifactId>core</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <dependencies>
+
         <dependency>
             <groupId>com.bk</groupId>
             <artifactId>api</artifactId>
