--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>api</module>
-        <module>impl</module>
+        <module>core</module>
         <module>authhandler</module>
         <module>consumer</module>
     </modules>
