Added Principal building logic

--- a/consumer/src/main/resources/application.properties
+++ b/consumer/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-logging.level.root=debug
+logging.level.root=info
 server.port=8443
 server.ssl.key-store=/Users/bhushankarmarkar/Workspace/keystore/keystore.p12
 server.ssl.key-store-password=bkpune
