--- a/consumer/src/main/resources/authentication.properties
+++ b/consumer/src/main/resources/authentication.properties
@@ -3,6 +3,9 @@ authentication.handler= OIDC
 #OIDC
 #X509
 
+#####OIDC Properties#####
+oidc.clientId = 0oa3swioodJpiZ1ap5d7
+oidc.clientSecret = sWt5nR3AUb9MOBbj3B1oqKKARVsHAQqKv9Iio-3x
 #metadata endpoint will provide rest of the endpoints, but still will keep them as separate properties for now
 oidc.metadataEndpoint = https://dev-22692225-admin.okta.com/.well-known/openid-configuration
 oidc.issuer = https://dev-22692225.okta.com/oauth2/default
