--- a/consumer/src/main/resources/authentication.properties
+++ b/consumer/src/main/resources/authentication.properties
@@ -1,11 +1,11 @@
-authentication.handler= OIDC
+authentication.handler= USERNAME_PASSWORD
 #USERNAME_PASSWORD
 #OIDC
 #X509
 
 #####OIDC Properties#####
-oidc.clientId = 0oa3swioodJpiZ1ap5d7
-oidc.clientSecret = sWt5nR3AUb9MOBbj3B1oqKKARVsHAQqKv9Iio-3x
+oidc.clientId =
+oidc.clientSecret =
 #metadata endpoint will provide rest of the endpoints, but still will keep them as separate properties for now
 oidc.metadataEndpoint = https://dev-22692225-admin.okta.com/.well-known/openid-configuration
 oidc.issuer = https://dev-22692225.okta.com/oauth2/default
