--- a/core/pom.xml
+++ b/core/pom.xml
@@ -62,6 +62,18 @@
             <artifactId>okta-jwt-verifier-impl</artifactId>
             <version>0.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.bk</groupId>
+            <artifactId>dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.bk</groupId>
+            <artifactId>model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 </project>
