--- a/model/pom.xml
+++ b/model/pom.xml
@@ -10,7 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>model</artifactId>
-
+<dependencies>
+    <dependency>
+        <groupId>com.bk</groupId>
+        <artifactId>dao</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+</dependencies>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
