--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>authhandler</module>
         <module>consumer</module>
         <module>model</module>
+        <module>dao</module>
     </modules>
 
     <properties>
