- Fix compiler error - Refactoring - Upgrade to Spring 6 - Commented DAO due to hibernate auto db creation issues

--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,9 @@
         <module>authhandler</module>
         <module>consumer</module>
         <module>model</module>
-        <module>dao</module>
+<!--       Fails due to hibernate auto db creation issue with hibernate 6.x
+ <module>dao</module>
+ -->
     </modules>
 
     <properties>
