--- a/authhandler/pom.xml
+++ b/authhandler/pom.xml
@@ -27,5 +27,12 @@
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>10.0.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
+
 </project>
