--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>reflections</artifactId>
             <version>0.10.2</version>
         </dependency>
+        <dependency>
+            <groupId>jakarta.platform</groupId>
+            <artifactId>jakarta.jakartaee-api</artifactId>
+            <version>10.0.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
